fixed issue of not showing colors of state icons, fasboard availability widget on IE

--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -467,8 +467,24 @@
           background-color: #4f824f;
         }
 
+        .sa-icon-reserve-available-north {
+          background-color: black;
+        }
+
+        .sa-icon-reserve-available-south {
+          background-color: #e08a0c;
+        }
+
+        .sa-icon-reserve-available-schipper {
+          background-color: #e0c100;
+        }
+
         .sa-icon-reserve-unavailable {
           background-color: #a93232;
+        }
+
+        .sa-icon-reserve-unreached {
+          background-color: #65619b;
         }
 
         .sa-icon-reserve-noplanning {
